<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.novartis.voyager</groupId>
  <artifactId>voyager</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>war</packaging>
  <name>voyager</name>
  <url>http://maven.apache.org</url>
  
  <properties>
    <service.name>Voyager Data Receiver</service.name>
    <java-version>1.8</java-version>
    <slf4j.version>1.7.7</slf4j.version>
	<spring.version>4.1.1.RELEASE</spring.version>
  </properties>
  
  <dependencies>
  
  	<dependency>
		<groupId>javax.servlet</groupId>
		<artifactId>servlet-api</artifactId>	
		<version>2.5</version>
		<scope>provided</scope>
	</dependency>

		<!-- ORACLE database driver -->
	<dependency>
		<groupId>com.oracle</groupId>
		<artifactId>ojdbc7</artifactId>
		<version>12.1.0.1</version>
	</dependency>
	<dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-beans</artifactId>
		<version>${spring.version}</version>
	</dependency>

	<dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-context</artifactId>
		<version>${spring.version}</version>
	</dependency>

	<dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-web</artifactId>
		<version>${spring.version}</version>
		<scope>compile</scope>
	</dependency>

	<dependency>
		<groupId>com.fasterxml.jackson.core</groupId>
		<artifactId>jackson-databind</artifactId>
		<version>2.3.3</version>
	</dependency>

	<dependency>
		<groupId>log4j</groupId>
		<artifactId>log4j</artifactId>
		<version>1.2.17</version>
		<exclusions>
			<exclusion>
				<groupId>com.sun.jdmk</groupId>
				<artifactId>jmxtools</artifactId>
			</exclusion>
			<exclusion>
				<groupId>com.sun.jmx</groupId>
				<artifactId>jmxri</artifactId>
			</exclusion>
			<exclusion>
				<groupId>javax.jms</groupId>
				<artifactId>jms</artifactId>
			</exclusion>
		</exclusions>
	</dependency>
	
	<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>slf4j-api</artifactId>
		<version>${slf4j.version}</version>
	</dependency>

	<dependency>
		<groupId>org.slf4j</groupId>
		<artifactId>slf4j-log4j12</artifactId>
		<version>1.7.12</version>
	</dependency>
	
	<dependency>
		<groupId>junit</groupId>
		<artifactId>junit</artifactId>
		<version>4.11</version>
	</dependency>
	
	<dependency>
		<groupId>org.mockito</groupId>
		<artifactId>mockito-all</artifactId>
		<version>1.10.19</version>
	</dependency>
	
	<dependency>
		<groupId>org.springframework</groupId>
		<artifactId>spring-test</artifactId>
		<version>4.0.0.RELEASE</version>
		<scope>test</scope>
	</dependency>
	
	<dependency>
		<groupId>com.amazonaws</groupId>
		<artifactId>aws-java-sdk</artifactId>
		<version>1.10.74</version>
		<exclusions>
			<exclusion>
				<artifactId>aws-java-sdk-simpledb</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-simpleworkflow</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-storagegateway</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-route53</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-sts</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-redshift</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-elasticbeanstalk</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-glacier</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-emr</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-elastictranscoder</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-dynamodb</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-sns</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-cloudtrail</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-cognitoidentity</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-cognitosync</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-cloudformation</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-cloudfront</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-kinesis</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-opsworks</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-ses</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-autoscaling</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-cloudsearch</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-cloudwatchmetrics</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-swf-libraries</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-codedeploy</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-ssm</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-cloudhsm</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-ecs</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
			<exclusion>
				<artifactId>aws-java-sdk-lambda</artifactId>
				<groupId>com.amazonaws</groupId>
			</exclusion>
		</exclusions>
	</dependency>
	
	<dependency>
		<groupId>commons-codec</groupId>
		<artifactId>commons-codec</artifactId>
		<version>1.7</version>
	</dependency>

	<dependency>
		<groupId>commons-io</groupId>
		<artifactId>commons-io</artifactId>
		<version>2.4</version>
	</dependency>

	<dependency>
		<groupId>org.apache.commons</groupId>
		<artifactId>commons-pool2</artifactId>
		<version>2.3</version>
	</dependency>
	
	<dependency>
	  <groupId>org.apache.commons</groupId>
	  <artifactId>commons-lang3</artifactId>
	  <version>3.4</version>
    </dependency>
	
  </dependencies>


  <build>
  	<finalName>${project.artifactId}</finalName>
  	<pluginManagement>
    	<plugins>
        	<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<compilerVersion>1.8</compilerVersion>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
            <plugin>
              <artifactId>maven-resources-plugin</artifactId>
              <version>2.7</version>
            </plugin>
            <plugin>
   		      <groupId>org.apache.maven.plugins</groupId>
     		  <artifactId>maven-war-plugin</artifactId>
              <configuration>
                <failOnMissingWebXml>false</failOnMissingWebXml>
              </configuration>
           </plugin> 
           <plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<includes>
						<include>**/*Jenkins.*</include>
					</includes>
					<useSystemClassLoader>true</useSystemClassLoader>
					<useManifestOnlyJar>false</useManifestOnlyJar>
					<argLine>-XX:MaxPermSize=512m</argLine>
					<forkMode>once</forkMode>
					<failIfNoTests>false</failIfNoTests>
					<junitArtifactName>junit:junit</junitArtifactName>
					<skipTests>false</skipTests>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>tomcat-maven-plugin</artifactId>
				<version>1.1</version>
				<configuration>
					<url>http://localhost:8080/manager/text</url>
					<server>TomcatServer</server>
				</configuration>
			</plugin>          
          </plugins>
        </pluginManagement>   
    </build>
</project>